# dcs08961

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst
doc/: CMakeLists.txt  Doxyfile.dev.in  Doxyfile.usr.in
doc/design/: platform.rst
proto/: proto.cpp  (+9 more)
share/: CMakeLists.txt
share/shader/: CMakeLists.txt
share/shader/glsl/: phong.fp.glsl  phong.vp.glsl
share/shader/glsl/common/: config.glsl  constants.glsl  functions.glsl  light.glsl  material.glsl  phong.glsl  pipeline.glsl  uniforms.glsl
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/common/: CMakeLists.txt  glut.cpp  glut.hpp  glut.inl  light.cpp  light.hpp  model.cpp  model.hpp  render.cpp  stats.cpp  stats.hpp
src/app/common/test/: CMakeLists.txt  glut.cpp
src/app/oglplus/: 01.cpp  02.cpp  03.cpp  CMakeLists.txt  glut_glew_app.hpp
src/app/oglplus/boxes/: CMakeLists.txt  app_oglplus_boxes.fs.glsl  app_oglplus_boxes.vs.glsl  main.cpp
src/app/oglplus/glsl/: 01.vs.glsl  app_oglplus_01.fs.glsl  app_oglplus_01.vs.glsl  app_oglplus_02.constants.glsl  app_oglplus_02.fs.glsl  app_oglplus_02.fs.glsl.jsd  app_oglplus_02.functions.glsl  app_oglplus_02.light.glsl  app_oglplus_02.material.glsl  app_oglplus_02.uniforms.glsl  app_oglplus_02.vs.glsl  app_oglplus_02.vs.glsl.jsd
src/app/oglplus/viewer/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  model.cpp  model.hpp  ssbo.cpp  ssbo.hpp  ssbo.inl  stats.cpp  stats.hpp  window.cpp  window.hpp
src/app/oglplus/voxels/: CMakeLists.txt  app_oglplus_voxels.gs.glsl  app_oglplus_voxels.vs.glsl  application.cpp  application.hpp  main.cpp  model.cpp  model.hpp  ssbo.cpp  ssbo.hpp  ssbo.inl  stats.cpp  stats.hpp  window.cpp  window.hpp
src/app/projection/: CMakeLists.txt  main.cpp
src/app/shading/: CMakeLists.txt
src/app/shading/sperical_harmonics/: CMakeLists.txt  main.cpp
src/app/shadows/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/archive/: CMakeLists.txt  template.cpp
src/lib/celestial/: CMakeLists.txt
src/lib/celestial/orbital/: base.cpp  jupiter.cpp  mars.cpp  mercury.cpp  moon.cpp  neptune.cpp  saturn.cpp  sun.cpp  uranus.cpp  venus.cpp
src/lib/celestial/test/: CMakeLists.txt  orbitals.cpp
src/lib/event/: CMakeLists.txt  base.cpp
src/lib/event/event/: base.cpp  event.cpp
src/lib/event/handler/: base.cpp
src/lib/event/test/: CMakeLists.txt  base.cpp  event.cpp  handler.cpp  notifier.cpp  notify.cpp  shared.hpp
src/lib/field/: CMakeLists.txt  adapter_multi.cpp  adapter_single.cpp  base.cpp  container.cpp  defaults.cpp  value_multi.cpp  value_single.cpp
src/lib/field/adapter/: multi.cpp  single.cpp
src/lib/field/connection/: base.cpp  manager.cpp  simple.cpp  transform.cpp  update.cpp
src/lib/field/multi/: base.cpp
src/lib/field/single/: base.cpp
src/lib/field/test/: CMakeLists.txt  adapter_multi.cpp  adapter_single.cpp  connection_manager.cpp  connection_simple.cpp  connection_transform.cpp  connection_update.cpp  container.cpp  shared.hpp  value_multi.cpp  value_single.cpp
src/lib/field/value/: multi.cpp  single.cpp
src/lib/geometry/: CMakeLists.txt  kd_tree.cpp  lattice.cpp  triangle.cpp
src/lib/geometry/test/: CMakeLists.txt  lattice.cpp  triangle.cpp
src/lib/gli/: CMakeLists.txt
src/lib/gli/gtx/: io.cpp
src/lib/gli/test/: CMakeLists.txt  gtx_io.cpp  io.cpp
src/lib/glm/: CMakeLists.txt
src/lib/glm/gtx/: limits.cpp  morton.cpp  utilities.cpp
src/lib/glm/test/: CMakeLists.txt  gtx_limits.cpp  gtx_morton.cpp  gtx_utilities.cpp
src/lib/platform/: CMakeLists.txt
src/lib/platform/application/: base.cpp  command_line.cpp  multi_instance.cpp  single_instance.cpp
src/lib/platform/glut/: CMakeLists.txt  io.cpp  utilities.cpp
src/lib/platform/glx/: CMakeLists.txt  io.cpp
src/lib/platform/handler/: base.cpp  common.hpp  common.inl  frame.cpp  keyboard.cpp  mouse.cpp  navigation.cpp  touch.cpp
src/lib/platform/oglplus/: CMakeLists.txt  application.cpp
src/lib/platform/posix/: CMakeLists.txt
src/lib/platform/test/: CMakeLists.txt  application.cpp  command_line.cpp  handler.cpp  handler_frame.cpp  handler_keyboard.cpp  handler_mouse.cpp  handler_touch.cpp  window.cpp
src/lib/platform/win32/: CMakeLists.txt  io.cpp  utilities.cpp
src/lib/platform/window/: base.cpp  handler.cpp  io.cpp  manager.cpp  rect.cpp  utilities.cpp
src/lib/platform/winrt/: CMakeLists.txt
src/lib/render/: CMakeLists.txt  api.cpp  context.cpp  window.cpp
src/lib/render/base/: CMakeLists.txt  context.cpp  pass.cpp  stage.cpp  window.cpp
src/lib/render/d3d/: CMakeLists.txt  context.cpp  pass.cpp  stage.cpp
src/lib/render/null/: CMakeLists.txt  context.cpp  pass.cpp  stage.cpp  statistics.cpp  statistics.hpp
src/lib/render/ogl/: CMakeLists.txt  context.cpp  pass.cpp  stage.cpp
src/lib/render/pass/: base.cpp  container.cpp
src/lib/render/shader/: base.cpp  compute.cpp  fragment.cpp  geometry.cpp  program.cpp  tessellation.cpp  vertex.cpp
src/lib/render/stage/: base.cpp  clear.cpp  draw.cpp  null.cpp  setup.cpp  swap.cpp
src/lib/render/state/: base.cpp  blend.cpp  depth_stencil.cpp  raster.cpp  sampler.cpp
src/lib/render/stats/: base.cpp  cpu.cpp
src/lib/render/test/: CMakeLists.txt  api.cpp  context.cpp  pass_container.cpp  shader_program.cpp  stage_clear.cpp  stage_draw.cpp  stage_null.cpp  stage_setup.cpp  stage_swap.cpp  window.cpp
src/lib/scene/: CMakeLists.txt  file.cpp
src/lib/scene/loader/: mtl.cpp  mtl.hpp  obj.cpp  obj.hpp  xform.cpp  xform.hpp
src/lib/scene/node/: base.cpp  camera.cpp  dynamic.cpp  geometry.cpp  global_light.cpp  group.cpp  local_light.cpp  material_group.cpp  mesh.cpp  rotor.cpp  select.cpp  transform.cpp  translator.cpp
src/lib/scene/object/: area_light.cpp  base.cpp  directional_light.cpp  light_source.cpp  material.cpp  positional_light.cpp  spot_light.cpp  texture.cpp
src/lib/support/: CMakeLists.txt  application.cpp  chrono.cpp  chrono_io.cpp  hasher.cpp  io_utils.cpp  refcounted.cpp  signal_handler.cpp  signal_handler_posix.cpp  signal_handler_win32.cpp  string.cpp  trace.cpp  type_info.cpp
src/lib/window/: CMakeLists.txt  base.cpp
(+505 files in other folders)
