# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2014 University of Hull                                                            #
#                                                                                                  #
####################################################################################################

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(deferred)
ADD_SUBDIRECTORY(lighting)
ADD_SUBDIRECTORY(postprocess)
ADD_SUBDIRECTORY(oglplus)
ADD_SUBDIRECTORY(projection)
ADD_SUBDIRECTORY(shading)
ADD_SUBDIRECTORY(shadows)
