# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2014-2015 University of Hull                                                       #
#                                                                                                  #
####################################################################################################

add_subdirectory(common)
add_subdirectory(deferred)
add_subdirectory(lighting)
add_subdirectory(postprocess)
add_subdirectory(oglplus)
add_subdirectory(projection)
add_subdirectory(shading)
add_subdirectory(shadows)
