# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2014-2015 University of Hull                                                       #
#                                                                                                  #
####################################################################################################

ADD_SUBDIRECTORY(archive)
ADD_SUBDIRECTORY(event)
ADD_SUBDIRECTORY(field)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(gli)
ADD_SUBDIRECTORY(glm)
ADD_SUBDIRECTORY(render)
ADD_SUBDIRECTORY(scene)
ADD_SUBDIRECTORY(support)
