# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2014-2015 University of Hull                                                       #
#                                                                                                  #
####################################################################################################

add_subdirectory(celestial)
add_subdirectory(event)
add_subdirectory(field)
add_subdirectory(geometry)
add_subdirectory(gli)
add_subdirectory(glm)
add_subdirectory(platform)
add_subdirectory(render)
add_subdirectory(scene)
add_subdirectory(support)
