# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2014-2015 University of Hull                                                       #
#                                                                                                  #
####################################################################################################

ADD_SUBDIRECTORY(boxes)
#ADD_SUBDIRECTORY(viewer)
